Fix moving association widgets

In the previous version, the movement of the association
widgets was broken and has now been fixed.

BUG:447866
FIXED-IN:25.08.2